--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,8 @@ body {
 }
 .box {
     position: absolute;
-    width: 150px;
-    height: 150px;
+    width: 140px;
+    height: 140px;
     /* background-image: url('../img/Idle\ \(1\).png'); */
     background-size: cover;
     background-repeat: no-repeat;
@@ -31,14 +31,15 @@ body {
     /*right: 10px;*/
     /*top: 0px;*/
     left: 30px;
-    /*background-color: orangered;*/
+    background-color: orangered;
 }
 .boxEnemy {
     position: absolute;
-    width: 150px;
-    height: 150px;
+    width: 110px;
+    height: 140px;
     /* background-image: url('../img/Idle\ \(1\).png'); */
     background-size: cover;
+    /*background-position: center;*/
     background-repeat: no-repeat;
     bottom: 10px;
     right: 0px;
