--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
     /*right: 10px;*/
     /*top: 0px;*/
     left: 30px;
-    background-color: orangered;
+    /*background-color: orangered;*/
 }
 .boxEnemy {
     position: absolute;
